--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -9,12 +9,20 @@
         <h2><br>My previous projects</h2>
       </div>
 
-      <div class="container" style="padding-bottom:50px; height:50px;border-radius: 10%;">
+      <div class="container" style="padding-bottom:20 px; height:50px;border-radius: 10%;">
         <br><img class="myimg" src="/Assets/images/family1.png" alt="Slack Bot">
-        <h4>Serverless Slack bot using AWS Lambda and API Gateway</h4>
-        <p>Built enterprise-level Slack bot using AWS serverless technologies like AWS Lambda and API Gateway</p>
+        <h4>Family Tracking system</h4>
+        <p> The application aims at providing a simple way-out for ensuring the child’s safety all the while he is by
+          his own. The main objectives of this application are as follows:The application would provide the ability to
+          divide interested geo-graphical area into different sub zones
+          (e.g. safe, risky, highly risky etc.) and based on branching of these zones a different alert message would be
+          sent to registered users. The application would also provide the ability to automatically send a message to
+          registered users with mobile’s current location after user configured time interval. On geographical boundary
+          branch, the application would warn user in the form of a message with beep so that mobile user would also be
+          well informed about risk associated with his/her movement.
+        </p>
         <br><img class="myimg" src="/Assets/images/digits.png" alt="Digits">
-        <h4>Handwritten digit recognizer using CNN</h4>
+        <h4>Ha CNN</h4>
         <p>Built a handwritten digit recognizer using Convolutional Neural Network over MNIST handwritten digit database
         </p>
         <br><img class="myimg" src="/Assets/images/lstmnodeimg.png" alt="LSTM">
