--- a/views/about.ejs
+++ b/views/about.ejs
@@ -20,7 +20,7 @@
         <h5><br>Hello everyone, my name is nayna bhuva. I am from India.<br>
           <br>I completed my Bachelor of Engineering in Information Technology from Maliba University.<br>
           <br>I am currently enrolled in <b>Software Engineering technician</b> course at <b>Centennial
-            College</b>.<br><br>
+            College</b>.<br>
         </h5>
 
         <!-- Link to download my resume -->
