--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -22,12 +22,10 @@
           well informed about risk associated with his/her movement.
         </p>
         <br><img class="myimg" src="/Assets/images/digits.png" alt="Digits">
-        <h4>Ha CNN</h4>
+        <h4>handwritten CNN</h4>
         <p>Built a handwritten digit recognizer using Convolutional Neural Network over MNIST handwritten digit database
         </p>
-        <br><img class="myimg" src="/Assets/images/lstmnodeimg.png" alt="LSTM">
-        <h4>Time-series forecasting using LSTM</h4>
-        <p>Built a time-series forecasting - future sales predictor model using LSTM</p>
+
       </div>
 
       <%- include partials/bottom_nav.ejs %>
