--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,9 @@
       <!-- Home content -->
       <div class="container">
         <h2><br>Welcome to my website!<br></h2>
+
+        <img src="bg.jpg" height="350px" width="200px">
         <h3><br><br><br><u>Mission Statement</u><br></h3>
-        <img src="bg.jpg">
         <h5>IT student with aptitude for information systems analysis and computer programming, <br>seeking for a job
           position to develop my skills & potential and contribute to the organization.</h5>
         <h4><br><br><br>New here? Go to:<br></h4>
