--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,20 +1,18 @@
 <%- include partials/header.ejs %>
 
-<%- include partials/main_nav.ejs %>
+  <%- include partials/main_nav.ejs %>
 
-<%- include partials/title.ejs %>
+    <%- include partials/title.ejs %>
 
-  <!-- Services content -->
-  <div class="container">
-    <h2><br>Services I offer</h2>
-  </div>
+      <!-- Services content -->
+      <div class="container">
+        <h2><br>Services I offer</h2>
+      </div>
 
-  <div class="container">
-    <br><img class="myimg" src="/Assets/images/pythonimg.jpeg" alt="Python Logo"><h4>General Programming in Python</h4>
-    <br><img class="myimg" src="/Assets/images/awsimg.png" alt="AWS Logo"><h4>Help with Amazon Web Services and CLI/SDK</h4>
-    <br><img class="myimg" src="/Assets/images/windowsimg.png"  alt="Windows Logo"><h4>Operating system troubleshooting for OS such as Windows</h4>
-  </div>
+      <div class="container">
+        <br><img class="myimg" src="/Assets/images/service.png" alt="Services">
 
-<%- include partials/bottom_nav.ejs %>
 
-<%- include partials/footer.ejs %>
+        <%- include partials/bottom_nav.ejs %>
+
+          <%- include partials/footer.ejs %>
